--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -22,7 +22,7 @@ training:
   learning_rate: 0.0001
   num_epochs: 30
   warmup_steps: 500
-  lr_scheduler: "constant"
+  lr_scheduler: "linear"
   weight_decay: 0.01
   gradient_clip_norm: 1.0
   save_steps: 1000
