--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -13,16 +13,16 @@ attention:
   global_ratio: 0.1
   learnable_sparsity: true
   temperature: 1.0
-  pattern_temperature: 1.0
-  min_pattern_temperature: 0.3
+  pattern_temperature: 2.0
+  min_pattern_temperature: 0.5
   pattern_dropout: 0.1
 
 training:
   batch_size: 16
-  learning_rate: 0.0002
-  pattern_lr_multiplier: 10.0
-  num_epochs: 100
-  warmup_steps: 1000
+  learning_rate: 0.0005
+  pattern_lr_multiplier: 20.0
+  num_epochs: 50
+  warmup_steps: 2000
   lr_scheduler: "cosine"
   weight_decay: 0.01
   gradient_clip_norm: 1.0
@@ -63,4 +63,5 @@ hardware:
   pin_memory: true
 
 scheduler:
-  type: "cosine"
+  type: "cosine_with_restarts"
+  min_lr: 1e-5 
